--- a/style.css
+++ b/style.css
@@ -64,3 +64,86 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
   font-weight: bold;
 }
 
+.active h1 strong {
+  color: #FF7500;
+}
+.file, em {
+  color: #999;
+  font-style: italic;
+}
+#wrap {
+  background-color: #ddd;
+  border-width: 1px 0;
+  border-color: #ccc;
+  border-style: solid;
+}
+.clear {
+  clear: both;
+}
+.peer {
+  color: #FF7500;
+  font-weight: 600;
+}
+.you {
+  color: #0C6BA1;
+  font-weight: 600;
+}
+#pid {
+  display: inline-block;
+  padding: 5px;
+  margin: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #0C6BA1;
+  font-weight: 600;
+}
+.warning {
+  font-size: 12px;
+  line-height: 20px;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  text-shadow: 0 1px 0 rgba(0,0,0,0.4);
+  font-weight: 300;
+  border-width: 1px 0;
+  border-color: #000;
+  border-style: solid;
+}
+
+.filler {
+  display: block;
+  padding: 10px;
+}
+#actions {
+  padding: 10px;
+}
+
+button, input {
+  font-size: 15px;
+  font-family: Arial;
+  border: 1px solid #ccc;
+  border-right: 0;
+  padding: 5px;
+  background: #fff;
+  margin: 0;
+  color: #444;
+  text-shadow: 0 1px 0 rgba(255,255,255,0.4);
+}
+.button, button {
+  cursor: pointer;
+  background-color: #ddd;
+  border: 1px solid #ccc;
+
+
+}
+
+#close {
+  background-color: #FF7500;
+  border-color: #c15c06;
+}
+
+.important {
+  font-size: 15px;
+  color: #F2C777;
+  margin-bottom: 10px;
+}
