--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ Copyright (c) Nicolas Gallagher and Jonathan Neal
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }
 
+h2 {
+  color : #ff0000;
+}
 #my-video {
   margin-top: 15px;
   width: 280px;
